// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`card header strip — measure (spec §5.2/§5.3) > structural snapshot — first-use instruction present 1`] = `
{
  "atomic": true,
  "heightPt": 24,
  "id": "cardHeader",
  "node": {
    "cardId": "4829306",
    "digitChars": [
      "4",
      "8",
      "2",
      "9",
      "3",
      "0",
      "6",
    ],
    "digitCount": 7,
    "digitXOffsets": [
      0,
      14.02,
      28.02,
      41.39,
      54.37,
      68.05,
      82.48,
    ],
    "firstUse": true,
    "instructionText": null,
    "kind": "cardHeader",
    "labelText": "Student No.",
    "metaText": "",
  },
  "spacingClass": "heading",
}
`;

exports[`card header strip — measure (spec §5.2/§5.3) > structural snapshot — non-first-use reminder 1`] = `
{
  "atomic": true,
  "heightPt": 36,
  "id": "cardHeader",
  "node": {
    "cardId": "4829306",
    "digitChars": [
      "4",
      "8",
      "2",
      "9",
      "3",
      "0",
      "6",
    ],
    "digitCount": 7,
    "digitXOffsets": [
      0,
      14.02,
      28.02,
      41.39,
      54.37,
      68.05,
      82.48,
    ],
    "firstUse": false,
    "instructionText": null,
    "kind": "cardHeader",
    "labelText": "Student No.",
    "metaText": "",
  },
  "spacingClass": "heading",
}
`;
